--- a/index.html
+++ b/index.html
@@ -3,23 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="dest/css/styles.css" />
     <title>(S)CSS Masterclass</title>
   </head>
-    <body>
-      <div class="grid">
-        <div class="item">This is a very long text</div>
-        <div class="item">This is a very longer longer long text</div>
-        <div class="item">This is a text</div>
-        <div class="item">
-          Not long at all, or maybe, who knows? Maybe you know, love you.
-        </div>
-
-        <div class="item">This is a very longer long text</div>
-        <div class="item">This is a very longer long text</div>
-        <div class="item">This is a very longer long text</div>
-        <div class="item">This is a very longer long text</div>
-      </div>
-    </body>
+  <body>
+    <h2>Title</h2>
+    <div class="box">
+      <h2>Another Title</h2>
+      <button>Hello</button>
+    </div>
+    <button>Bye bye</button>
+  </body>
 </html>
-
